--- a/templates/form.html
+++ b/templates/form.html
@@ -10,8 +10,8 @@
                 </div>
 
 		<div class="form-group">
-			<label for="email">Email adres<sup>*</sup></label>
-			<input type="email" class="form-control" id="email" name="email" placeholder="gigantischebaas@stickyutrecht.nl" required>
+			<label for="email">E-mailadres<sup>*</sup></label>
+			<input type="email" class="form-control" id="email" name="email" placeholder="gigantischebaas@svsticky.nl" required>
 		</div>
 
 		<div class="form-group">
@@ -35,11 +35,11 @@
 
 		<div class="form-group">
 			<label for="ticket">Bonnetje uploaden<sup>*</sup></label>
-			<input type="hidden" name="MAX_FILE_SIZE" value="2097152">
+			<input type="hidden" name="MAX_FILE_SIZE" value="10485760">
 			<input name="ticket" type="file" id="ticket" required>
-			<p class="help-block">Maximale grootte is 2MB. Alleen .pdf, .jpg, .gif en .png bestanden.</p>
+			<p class="help-block">Maximale grootte is 10MB. Alleen <s>.pdf, </s>.jpg, .gif en .png bestanden.</p>
 
-                        <p class="help-block">Zorg dat de datum, het (btw) bedrag en de de verschillende producten of diensten goed leesbaar zijn.</p>
+                        <p class="help-block">Zorg dat de datum, het (btw) bedrag en de verschillende producten of diensten goed leesbaar zijn.</p>
 		</div>
 
 		<div class="form-group">
