Fix PDF support
Fixes #6. The problem was caused by the not-very-recent change of
MIME-type for PDFs, from application/x-pdf (x for eXperimental) to
application/pdf. The later key in the settings overwrote the earlier
key, and as x-pdf should not occur anymore, it has been removed.

--- a/templates/form.html
+++ b/templates/form.html
@@ -37,7 +37,7 @@
 			<label for="ticket">Bonnetje uploaden<sup>*</sup></label>
 			<input type="hidden" name="MAX_FILE_SIZE" value="10485760">
 			<input name="ticket" type="file" id="ticket" required>
-			<p class="help-block">Maximale grootte is 10MB. Alleen <s>.pdf, </s>.jpg, .gif en .png bestanden.</p>
+			<p class="help-block">Maximale grootte is 10MB. Alleen .pdf, .jpg, .gif en .png bestanden.</p>
 
                         <p class="help-block">Zorg dat de datum, het (btw) bedrag en de verschillende producten of diensten goed leesbaar zijn.</p>
 		</div>
