--- a/templates/form.html
+++ b/templates/form.html
@@ -1,17 +1,23 @@
 	<form role="form" action="index.php" method="post" enctype="multipart/form-data" id="digidecs-form">
 		<div class="form-group">
 			<label for="name">Naam<sup>*</sup></label>
-			<input type="text" class="form-control" id="name" name="name" placeholder="Secretaris" required>
+			<input type="text" class="form-control" id="name" name="name" placeholder="Secretaris"
+			<?php echo refill("name"); ?>
+			required>
 		</div>
 
                 <div class="form-group">
                         <label for="bank-account">IBAN<sup>*</sup></label>
-                        <input id="bank-account" name="bank-account" type="text" class="form-control" placeholder="NL11INGB012345678" required>
+						<input id="bank-account" name="bank-account" type="text" class="form-control" placeholder="NL13TEST0123456789"
+						<?php echo refill("bank-account"); ?>
+						required>
                 </div>
 
 		<div class="form-group">
 			<label for="email">E-mailadres<sup>*</sup></label>
-			<input type="email" class="form-control" id="email" name="email" placeholder="gigantischebaas@svsticky.nl" required>
+			<input type="email" class="form-control" id="email" name="email" placeholder="gigantischebaas@svsticky.nl"
+			<?php echo refill("email"); ?>
+			required>
 		</div>
 
 		<div class="form-group">
@@ -19,18 +25,21 @@
 			<div class="input-group">
 				<span class="input-group-addon">&euro;</span>
 				<input id="totalamount" name="totalamount" type="text" class="form-control" placeholder="9999.00" required pattern="[-+]?[0-9]*[.]?[0-9]+" oninvalid="setCustomValidity('Only use digits and separate them with a dot (.) if needed.')"
-    onchange="try{setCustomValidity('')}catch(e){}">
+	onchange="try{setCustomValidity('')}catch(e){}"
+				<?php echo refill("totalamount"); ?>>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label for="description">Wat heb je gekocht?<sup>*</sup></label>
-			<input id="description" name="description" type="text" class="form-control" placeholder="Graafmachine" required>
+			<input id="description" name="description" type="text" class="form-control" placeholder="Graafmachine"
+			<?php echo refill("description"); ?> required>
 		</div>
 
 		<div class="form-group">
 			<label for="purpose">Waarvoor/welke commissie?<sup>*</sup></label>
-			<input id="purpose" name="purpose" type="text" class="form-control" placeholder="Bestuur, lul!" required>
+			<input id="purpose" name="purpose" type="text" class="form-control" placeholder="Bestuur, lul!"
+			<?php echo refill("purpose"); ?> required>
 		</div>
 
 		<div class="form-group">
@@ -44,9 +53,9 @@
 
 		<div class="form-group">
 			<label for="remarks">Opmerkingen</label>
-			<textarea name="remarks" class="form-control" rows="3" type="textarea" id="remarks"></textarea>
+			<textarea name="remarks" class="form-control" rows="3" type="textarea" id="remarks"><?php echo refill("remarks"); ?></textarea>
 		</div>
-		
+
 		<div class="form-group">
 			<label for="accept-tos">
 				<input type="checkbox" name="accept-tos" id="accept-tos" required> Ik heb alles gecheckt en naar waarheid ingevuld<sup>*</sup>
