--- a/templates/form_header.html
+++ b/templates/form_header.html
@@ -1,4 +1,4 @@
 <div class="panel-heading">
-	<h3 class="panel-title">DigiDecs&mdash;digitaal declareren bij Sticky</h3>
+	<h3 class="panel-title">DigiDecs&mdash;digitaal declareren bij ViaKunst</h3>
 </div>
 <div class="panel-body">
