--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 	<head>
-		<title>DigiDecs &middot; het digitale declaratieformulier van Studievereniging Sticky</title>
+		<title>DigiDecs &middot; het digitale declaratieformulier van ViaKunst</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="/css/bootstrap.min.css" rel="stylesheet">
 		<link href="/css/datepicker.css" rel="stylesheet">
